--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.26.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.7.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
