--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "antd": "^5.26.4",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "antd": "^5.27.0",
+    "i18next": "^25.3.6",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.7.0",
     "styled-components": "^6.1.19"
   },
