--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "lib": ["DOM", "ESNext"],
-    "types": ["react", "react-dom"]
+    "types": ["react", "react-dom"],
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true
   }
 }
